--- a/project/index.html
+++ b/project/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Birthday Reminder - Never Miss a Birthday Again</title>
-    <meta name="description" content="Keep track of important birthdays with our beautiful and intuitive birthday reminder app. Never miss a celebration again!" />
+    <title>TaskMaster Pro - Advanced Task Management System</title>
+    <meta name="description" content="AI-powered task management with real-time collaboration, analytics, and intelligent prioritization for teams." />
   </head>
   <body>
     <div id="root"></div>
